--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 
+
 /* General */
-*{
+* {
     margin: 0;
     padding: 0;
+}
+
+:root {
+    --font-default: basic-sans, sans-serif;
+    --color-black: rgb(30, 30, 30);
+    --color-white: rgb(255, 255, 255);
+    --color-accent: rgb(0, 245, 135);
 }
 
 html {
@@ -10,12 +18,14 @@ html {
 }
 
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 500;
+    font-family: var(--font-default);
+    font-weight: 400;
+    font-style: normal;
+    background-color: var(--color-black);
 }
 
 p {
-    color: white;
+    color: var(color-white);
 }
 
 /* Transition */
@@ -26,40 +36,114 @@ a, .btn {
 
 /* Desktop Navigation */
 
+nav {
+    display: flex;
+    background-color: var(--color-black);
+    justify-content: space-around;
+    align-items: center;
+    height: 15vh;
+}
+
 .logo {
-    color: white;
-    font-size: 17px;
-    margin-left: 100px;
-    padding-right: 100px;
+    color: var(--color-white);
+    font-size: 1.5rem;
 }
 
 .logo:hover {
+    color: var(--color-accent);
     cursor: default;
 }
 
-nav, .nav-links {
-    background-color: rgb(30, 30, 30);
-    display: flex;
-}
-
-nav {
-    justify-content: normal;
-    align-items: center;
-    height: 100px;
-}
-
 .nav-links {
-    gap: 50px;
+    display: flex;
+    gap: 2rem;
     list-style: none;
-    font-size: 17px;
+    font-size: 1.5rem;
 }
 
 a {
-    color: white;
+    color: var(--color-white);
     text-decoration: none;
 }
 
 a:hover {
-    color: rgb(229, 253, 15);
-    font-weight: 530;
+    color: var(--color-accent);
+    text-decoration: none;
+}
+
+/* Hambuger Menu */
+#hamburger-nav {
+    background-color: var(--color-black);
+    justify-content: space-around;
+    display: none;
+
+}
+
+.hamburger-menu {
+    position: relative;
+    display: inline-block;
+
+}
+
+.hamburger-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 24px;
+    width: 30px;
+    cursor: pointer;
+}
+
+
+.hamburger-icon span {
+    width: 100%;
+    height: 2px;
+    background-color: var(--color-white);
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links {
+    position: absolute;
+    top: 100%;
+    right: 0%;
+    background-color: var(--color-black);
+    width: fit-content;
+    max-height: 0;
+    overflow: hidden;
+    transition: all .03 ease-in-out;
+}
+
+.menu-links a {
+    display: block;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.5rem;
+    color: var(--color-white);
+    text-decoration: none;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links a:hover {
+    color: var(--color-accent);
+}
+
+.menu-links li {
+    color: var(--color-white);
+    list-style: none;
+}
+
+.menu-links.open {
+    max-height: 300px;
+}
+
+.hamburger-icon.open span:first-child{
+    transform: rotate(45deg) translate(4px, 6px);
+}
+
+.hamburger-icon.open span:nth-child(2){
+    opacity: 0;
+}
+
+.hamburger-icon.open span:last-child{
+    transform: rotate(-45deg) translate(5px, -8px);
 }
