--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -8,3 +8,14 @@
     }
 }
 
+@media screen and (max-width: 900px) {
+    #desktop-home {
+        display: none;
+    }
+    #small-home {
+        display: flex;
+    }
+}
+
+
+
